--- a/index.html
+++ b/index.html
@@ -477,8 +477,8 @@
                 <a href="#" onclick="launchApp('43. Forbidden Tech.html', 'Forbidden', '⚛️')" class="app-card cat-future">
                     <div class="app-icon">⚛️</div><div class="app-label">Forbidden Tech</div>
                 </a>
-                <a href="#" onclick="launchApp('44. Nuswantara Browser.html', 'Browser', '🌐')" class="app-card cat-tech">
-                    <div class="app-icon">🌐</div><div class="app-label">Browser</div>
+                <a href="#" onclick="launchApp('44. Gallery.html', 'Browser', '🔍')" class="app-card cat-tech">
+                    <div class="app-icon">🔍</div><div class="app-label">Browser</div>
                 </a>
             </div>
 
@@ -843,4 +843,5 @@
     </script>
 </body>
 </html>
+
 
