--- a/index.html
+++ b/index.html
@@ -478,7 +478,7 @@
                     <div class="app-icon">⚛️</div><div class="app-label">Forbidden Tech</div>
                 </a>
                 <a href="#" onclick="launchApp('44. Gallery.html', 'Browser', '🔍')" class="app-card cat-tech">
-                    <div class="app-icon">🔍</div><div class="app-label">Browser</div>
+                    <div class="app-icon">🔍</div><div class="app-label">Gallery</div>
                 </a>
             </div>
 
@@ -843,5 +843,6 @@
     </script>
 </body>
 </html>
+
 
 
