--- a/index.html
+++ b/index.html
@@ -480,6 +480,10 @@
                 <a href="#" onclick="launchApp('44. Gallery.html', 'Browser', '🔍')" class="app-card cat-tech">
                     <div class="app-icon">🔍</div><div class="app-label">Gallery</div>
                 </a>
+                <a href="#" onclick="launchApp('45. Media Player.html', 'Gamelan Player', '🎵')" class="app-card cat-time">
+                    <div class="app-icon">🎵</div>
+                    <div class="app-label">Media Player</div>
+                </a>
             </div>
 
             <div style="text-align:center; padding: 20px; font-size:0.6rem; color:#666;">
@@ -843,6 +847,7 @@
     </script>
 </body>
 </html>
+
 
 
 
