--- a/index.html
+++ b/index.html
@@ -444,8 +444,10 @@
                 <a href="#" onclick="launchApp('33. Civilization Hub.html', 'Civilization Hub', '🌍')" class="app-card cat-future">
                     <div class="app-icon">🌍</div><div class="app-label">Civilization Hub</div>
                 </a>
-                <a href="#" onclick="launchApp('34.Nusantara Auto-Anchor (POS Mode).html', 'POS Mode', '⚓')" class="app-card cat-future">
-                    <div class="app-icon">⚓</div><div class="app-label">Nusantara Auto-Anchor</div>
+                <a href="34.Nusantara Auto-Anchor (POS Mode).html" class="app-card cat-future">
+                    <link rel="icon" type="image/png" href="https://nanansuh234.github.io/Sunda-Nuswantara-OS/favicon.png">
+                    <img src="https://nanansuh234.github.io/Sunda-Nuswantara-OS/favicon.png" alt="Icon POS" style="width: 50px; height: 50px; margin-bottom: 10px;">
+                    <div class="app-label">Nusantara Auto-Anchor (POS Mode)</div>
                 </a>
                 <a href="#" onclick="launchApp('35.Nusantara Savings Simulator.html', 'Simulasi Dinar', '💰')" class="app-card cat-fin">
                     <div class="app-icon">💰</div><div class="app-label">Simulasi Tabungan</div>
@@ -477,8 +479,8 @@
                 <a href="#" onclick="launchApp('43. Forbidden Tech.html', 'Forbidden', '⚛️')" class="app-card cat-future">
                     <div class="app-icon">⚛️</div><div class="app-label">Forbidden Tech</div>
                 </a>
-                <a href="#" onclick="launchApp('44. Gallery.html', 'Browser', '🔍')" class="app-card cat-tech">
-                    <div class="app-icon">🔍</div><div class="app-label">Gallery</div>
+                <a href="#" onclick="launchApp('44. Gallery.html', 'Browser', '🖼️')" class="app-card cat-tech">
+                    <div class="app-icon">🖼️</div><div class="app-label">Gallery</div>
                 </a>
                 <a href="#" onclick="launchApp('45. Media Player.html', 'Gamelan Player', '🎵')" class="app-card cat-time">
                     <div class="app-icon">🎵</div>
@@ -847,6 +849,7 @@
     </script>
 </body>
 </html>
+
 
 
 
