--- a/index.html
+++ b/index.html
@@ -429,7 +429,7 @@
                 <a href="#" onclick="launchApp('28. Indikator Iman.html', 'Iman Metric', '📶')" class="app-card cat-tools">
                     <div class="app-icon">📶</div><div class="app-label">Iman Metric</div>
                 </a>
-                <a href="#" onclick="launchApp('29. Pustaka Ajaran Tauhid.html', 'Pustaka Tauhid', '📄')" class="app-card cat-doc">
+               <a href="29. Pustaka Ajaran Tauhid.html" class="app-card cat-doc">
                     <div class="app-icon">📄</div><div class="app-label">Pustaka Ajaran Tauhid</div>
                 </a>
                 <a href="#" onclick="launchApp('30. Quantum Vitality.html', 'Quantum Vitality', '⚛️')" class="app-card cat-future">
@@ -444,11 +444,10 @@
                 <a href="#" onclick="launchApp('33. Civilization Hub.html', 'Civilization Hub', '🌍')" class="app-card cat-future">
                     <div class="app-icon">🌍</div><div class="app-label">Civilization Hub</div>
                 </a>
-                 <a href="#" onclick="launchApp('34.Nusantara Auto-Anchor (POS Mode).html', 'POS Mode', '⚓')" class="app-card cat-future">
-                    <div class="app-icon" style="display: flex; align-items: center; justify-content: center;">
-                    <img src="https://nanansuh234.github.io/Sunda-Nuswantara-OS/favicon.png" alt="Icon POS" style="width: 45px; height: 45px;">
-                   </div>
-                     <div class="app-label">Nusantara Auto-Anchor (POS Mode)</div>
+                <a href="34.Nusantara Auto-Anchor (POS Mode).html" class="app-card cat-future">
+                    <link rel="icon" type="image/png" href="https://nanansuh234.github.io/Sunda-Nuswantara-OS/favicon.png">
+                    <img src="https://nanansuh234.github.io/Sunda-Nuswantara-OS/favicon.png" alt="Icon POS" style="width: 50px; height: 50px; margin-bottom: 10px;">
+                    <div class="app-label">Nusantara Auto-Anchor (POS Mode)</div>
                 </a>
                 <a href="#" onclick="launchApp('35.Nusantara Savings Simulator.html', 'Simulasi Dinar', '💰')" class="app-card cat-fin">
                     <div class="app-icon">💰</div><div class="app-label">Simulasi Tabungan</div>
@@ -850,6 +849,7 @@
     </script>
 </body>
 </html>
+
 
 
 
