--- a/index.html
+++ b/index.html
@@ -429,8 +429,9 @@
                 <a href="#" onclick="launchApp('28. Indikator Iman.html', 'Iman Metric', '📶')" class="app-card cat-tools">
                     <div class="app-icon">📶</div><div class="app-label">Iman Metric</div>
                 </a>
-               <a href="29. Pustaka Ajaran Tauhid.html" class="app-card cat-doc">
-                    <div class="app-icon">📄</div><div class="app-label">Pustaka Ajaran Tauhid</div>
+                <a href="29. Pustaka Ajaran Tauhid.html" target="_blank" class="app-card cat-doc">
+                    <div class="app-icon">📄</div>
+                    <div class="app-label">Pustaka Ajaran Tauhid</div>
                 </a>
                 <a href="#" onclick="launchApp('30. Quantum Vitality.html', 'Quantum Vitality', '⚛️')" class="app-card cat-future">
                     <div class="app-icon">⚛️</div><div class="app-label">Quantum Vitality</div>
@@ -849,6 +850,7 @@
     </script>
 </body>
 </html>
+
 
 
 
