--- a/index.html
+++ b/index.html
@@ -444,9 +444,10 @@
                 <a href="#" onclick="launchApp('33. Civilization Hub.html', 'Civilization Hub', '🌍')" class="app-card cat-future">
                     <div class="app-icon">🌍</div><div class="app-label">Civilization Hub</div>
                 </a>
-                <a href="34.Nusantara Auto-Anchor (POS Mode).html" class="app-card cat-future">
-                    <link rel="icon" type="image/png" href="https://nanansuh234.github.io/Sunda-Nuswantara-OS/favicon.png">
-                    <img src="https://nanansuh234.github.io/Sunda-Nuswantara-OS/favicon.png" alt="Icon POS" style="width: 50px; height: 50px; margin-bottom: 10px;">
+                <a href="34.Nusantara Auto-Anchor (POS Mode).html" target="_blank" class="app-card cat-future">
+                    <div class="app-icon" style="display: flex; align-items: center; justify-content: center;">
+                    <img src="https://nanansuh234.github.io/Sunda-Nuswantara-OS/favicon.png" alt="Icon POS" style="width: 50px; height: 50px;">
+                    </div>
                     <div class="app-label">Nusantara Auto-Anchor (POS Mode)</div>
                 </a>
                 <a href="#" onclick="launchApp('35.Nusantara Savings Simulator.html', 'Simulasi Dinar', '💰')" class="app-card cat-fin">
@@ -849,6 +850,7 @@
     </script>
 </body>
 </html>
+
 
 
 
