--- a/index.html
+++ b/index.html
@@ -487,6 +487,10 @@
                     <div class="app-icon">🎵</div>
                     <div class="app-label">Media Player</div>
                 </a>
+                <a href="#" onclick="launchApp('46. TV Jadul.html', 'Nuswantara TV', '📺')" class="app-card cat-tech">
+                    <div class="app-icon">📺</div>
+                    <div class="app-label">TV Jadul</div>
+                </a>
             </div>
 
             <div style="text-align:center; padding: 20px; font-size:0.6rem; color:#666;">
@@ -850,6 +854,7 @@
     </script>
 </body>
 </html>
+
 
 
 
