Update 45. Media Player.html

--- a/45. Media Player.html
+++ b/45. Media Player.html
@@ -30,7 +30,9 @@
         .player-container {
             background: var(--card);
             width: 350px;
-            height: 550px;
+            /* --- UBAH DISINI BRO --- */
+            height: 680px; /* Tadi 550px, sekarang 680px biar muat 3 list */
+            /* ----------------------- */
             border-radius: 20px;
             box-shadow: 0 10px 30px rgba(0,0,0,0.7);
             border: 1px solid #333;
