--- a/index.html
+++ b/index.html
@@ -491,6 +491,11 @@
                     <div class="app-icon">📺</div>
                     <div class="app-label">TV Jadul</div>
                 </a>
+                <a href="#" onclick="launchApp('54. Double Anchor System.html', 'Market Watch', '⚖️')" class="app-card cat-finance">
+                    <div class="app-icon">⚖️</div>
+                    <div class="app-label">Market Watch</div>
+                    <div class="app-desc">Double Anchor Valuation</div>
+                </a>
             </div>
 
             <div style="text-align:center; padding: 20px; font-size:0.6rem; color:#666;">
@@ -854,6 +859,7 @@
     </script>
 </body>
 </html>
+
 
 
 
