--- a/index.html
+++ b/index.html
@@ -491,9 +491,8 @@
                     <div class="app-icon">📺</div>
                     <div class="app-label">TV Jadul</div>
                 </a>
-                <a href="#" onclick="launchApp('54. Double Anchor System.html', 'Market Watch', '⚖️')" class="app-card cat-finance">
-                    <div class="app-icon">⚖️</div>
-                    <div class="app-label">Market Watch</div>
+                <a href="54. Double Anchor System.html" class="app-card cat-doc">
+                    <div class="app-icon">⚖️</div><div class="app-label">Double Anchor System</div>
                 </a>
                 
             </div>
@@ -859,6 +858,7 @@
     </script>
 </body>
 </html>
+
 
 
 
