--- a/index.html
+++ b/index.html
@@ -297,6 +297,43 @@
         ::-webkit-scrollbar { width: 4px; height: 4px; }
         ::-webkit-scrollbar-track { background: transparent; }
         ::-webkit-scrollbar-thumb { background: #555; border-radius: 2px; }
+
+        /* ============================================================ */
+        /* === TAMBAHAN KHUSUS HP (MOBILE FIX) === */
+        /* Agar taskbar nempel di bawah dan tidak hilang saat scroll */
+        /* ============================================================ */
+        @media (max-width: 768px) {
+            .taskbar {
+                position: fixed !important;
+                bottom: 0 !important;
+                left: 0 !important;
+                width: 100% !important;
+                z-index: 99999 !important; /* Paling atas */
+                padding-bottom: env(safe-area-inset-bottom); /* Aman untuk iPhone */
+            }
+
+            /* Start Menu ngikutin taskbar fixed */
+            .start-menu-popup {
+                position: fixed !important;
+                bottom: calc(var(--taskbar-h) + 10px + env(safe-area-inset-bottom)) !important;
+                left: 10px !important;
+            }
+
+            /* Geser konten dashboard biar icon paling bawah gak ketutup taskbar */
+            .dashboard-content {
+                padding-bottom: 100px !important; 
+            }
+
+            /* Agar tab aplikasi bisa di-scroll horizontal di HP */
+            .task-list {
+                overflow-x: auto;
+                -webkit-overflow-scrolling: touch;
+            }
+            
+            .task-tab {
+                min-width: 120px; /* Lebar minimal tab di HP */
+            }
+        }
     </style>
 </head>
 <body>
@@ -858,17 +895,3 @@
     </script>
 </body>
 </html>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
