--- a/index.html
+++ b/index.html
@@ -531,6 +531,10 @@
                 <a href="54. Double Anchor System.html" class="app-card cat-doc">
                     <div class="app-icon">⚖️</div><div class="app-label">Double Anchor System</div>
                 </a>
+                <a href="#" onclick="launchApp('55. Nilai Komoditas.html', 'Daftar Nilai', '📚')" class="app-card cat-fin">
+                    <div class="app-icon">📚</div>
+                    <div class="app-label">Daftar Nilai Komoditas</div>
+                </a>
                 
             </div>
 
@@ -895,3 +899,4 @@
     </script>
 </body>
 </html>
+
