--- a/index.html
+++ b/index.html
@@ -427,7 +427,7 @@
                 <a href="#" onclick="launchApp('14. Terapi Cahaya Malam.html', 'Terapi Sirep', '🕯️')" class="app-card cat-sys">
                     <div class="app-icon">🕯️</div><div class="app-label">Terapi Sirep</div>
                 </a>
-                <a href="#" onclick="launchApp('15. Appraisal Scanner.html', 'Appraisal', '🔍')" class="app-card cat-tech">
+                <a href="15. Appraisal Scanner.html" class="app-card cat-doc">
                     <div class="app-icon">🔍</div><div class="app-label">Appraisal</div>
                 </a>
                 <a href="#" onclick="launchApp('16. Restorasi Pangan.html', 'Teknologi Pangan', '🍯')" class="app-card cat-nature">
@@ -448,8 +448,8 @@
                 <a href="#" onclick="launchApp('21. Pustaka Peradaban.html', 'Leveling Diri', '⏫')" class="app-card cat-lingo">
                     <div class="app-icon">⏫</div><div class="app-label">Leveling Diri</div>
                 </a>
-                <a href="#" onclick="launchApp('23. Scanner Nilai Dasar.html', 'Analisa Dasar', '🧬')" class="app-card cat-nature">
-                    <div class="app-icon">🧬</div><div class="app-label">Analisa Dasar</div>
+                <a href="23. Scanner Nilai Dasar.html" class="app-card cat-doc">
+                    <div class="app-icon">🔍</div><div class="app-label">Analisa Dasar</div>
                 </a>
                 <a href="#" onclick="launchApp('24. Estafet Kemanusiaan.html', 'Codex Manusia', '👤')" class="app-card cat-human">
                     <div class="app-icon">👤</div><div class="app-label">Codex Manusia</div>
@@ -899,4 +899,5 @@
     </script>
 </body>
 </html>
+
 
