Update 55. Nilai Komoditas.html

--- a/55. Nilai Komoditas.html
+++ b/55. Nilai Komoditas.html
@@ -97,6 +97,10 @@
     <div class="subtitle">Gerbang Data Ekonomi Nilai & Kesepakatan Nuswantara</div>
 
     <div class="menu-grid">
+
+           <a href="15. Appraisal Scanner.html" class="app-card cat-doc">
+                    <div class="app-icon">🔍</div><div class="app-label">Appraisal</div>
+        </a>
         
         <a href="49. Daftar Nilai Komoditas.html" class="menu-card c-book">
             <span class="icon">📖</span>
@@ -131,4 +135,5 @@
     </div>
 
 </body>
+
 </html>
