Update 55. Nilai Komoditas.html

--- a/55. Nilai Komoditas.html
+++ b/55. Nilai Komoditas.html
@@ -98,14 +98,9 @@
 
     <div class="menu-grid">
 
-           <a href="15. Appraisal Scanner.html" class="app-card cat-doc">
-                    <div class="app-icon">🔍</div><div class="app-label">Appraisal</div>
-        </a>
-        
-        <a href="49. Daftar Nilai Komoditas.html" class="menu-card c-book">
-            <span class="icon">📖</span>
-            <div class="card-title">KITAB KESEPAKATAN</div>
-            <div class="card-desc">Database Live harga kesepakatan komunitas (Tampilan Buku Kuno).</div>
+           <a href="49. Daftar Nilai Komoditas.html" class="app-card cat-doc">
+                <div class="app-icon">📖</div><div class="app-label">KITAB KESEPAKATAN</div>
+                <div class="card-desc">Database Live harga kesepakatan komunitas (Tampilan Buku Kuno).</div>            
         </a>
 
         <a href="47. Community Barter Ledger.html" class="menu-card c-paper">
@@ -137,3 +132,4 @@
 </body>
 
 </html>
+
