--- a/55. Nilai Komoditas.html
+++ b/55. Nilai Komoditas.html
@@ -98,9 +98,10 @@
 
     <div class="menu-grid">
 
-           <a href="49. Daftar Nilai Komoditas.html" class="app-card cat-doc">
-                <div class="app-icon">📖</div><div class="app-label">KITAB KESEPAKATAN</div>
-                <div class="card-desc">Database Live harga kesepakatan komunitas (Tampilan Buku Kuno).</div>            
+            <a href="49. Daftar Nilai Komoditas.html" class="menu-card c-paper">
+            <span class="icon">📖</span>
+            <div class="card-title">KITAB KESEPAKATAN</div>
+            <div class="card-desc">Database Live harga kesepakatan komunitas (Tampilan Buku Kuno).</div>         
         </a>
 
         <a href="47. Community Barter Ledger.html" class="menu-card c-paper">
@@ -132,4 +133,5 @@
 </body>
 
 </html>
+
 
