--- a/index.html
+++ b/index.html
@@ -535,6 +535,9 @@
                     <div class="app-icon">📚</div>
                     <div class="app-label">Daftar Nilai Komoditas</div>
                 </a>
+                <a href="#" onclick="launchApp('56. Sunda Nuswantara Archive.html', 'Daftar Nilai', '📚')" class="app-card cat-fin">
+                    <div class="app-icon">📖</div>
+                    <div class="app-label">SUNDA NUSWANTARA ARCHIVE</div>
                 
             </div>
 
@@ -899,5 +902,6 @@
     </script>
 </body>
 </html>
+
 
 
