--- a/index.html
+++ b/index.html
@@ -495,6 +495,10 @@
                     <div class="app-icon">⚖️</div>
                     <div class="app-label">Market Watch</div>
                 </a>
+                <a href="#" onclick="launchApp('55. Nilai Komoditas.html', 'Daftar Nilai', '📚')" class="app-card cat-fin">
+                    <div class="app-icon">📚</div>
+                    <div class="app-label">Daftar Nilai Komoditas</div>
+                 </a>
                 <a href="#" onclick="launchApp('56. Sunda Nuswantara Archive.html', 'Nuswantara Archive', '📚')" class="app-card cat-fin">
                     <div class="app-icon">📖</div>
                     <div class="app-label">SUNDA NUSWANTARA ARCHIVE</div>
@@ -863,3 +867,4 @@
     </script>
 </body>
 </html>
+
