Update 13. Simulasi Siklus Gerhana Bulan dan Matahari Tahunan.html

--- a/13. Simulasi Siklus Gerhana Bulan dan Matahari Tahunan.html
+++ b/13. Simulasi Siklus Gerhana Bulan dan Matahari Tahunan.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ALMANAK AGUNG: SIKLUS NUSWANTARA</title>
+    <title>ALMANAK AGUNG: SIMULASI SIKLUS SUNDA NUSWANTARA</title>
     <link href="https://fonts.googleapis.com/css2?family=Courier+Prime:wght@400;700&family=Cinzel:wght@700&display=swap" rel="stylesheet">
     <style>
         :root {
@@ -218,4 +218,5 @@
         setTimeout(calculateEclipse, 500);
     </script>
 </body>
+
 </html>
