Update 13. Simulasi Siklus Gerhana Bulan dan Matahari Tahunan.html

--- a/13. Simulasi Siklus Gerhana Bulan dan Matahari Tahunan.html
+++ b/13. Simulasi Siklus Gerhana Bulan dan Matahari Tahunan.html
@@ -79,7 +79,7 @@
     <div class="manuscript">
         <div class="header">
             <h1>ALMANAK AGUNG</h1>
-            <div class="sub-header">POSISI RAHU (MATAHARI HITAM) & KETU (EKOR NAGA)</div>
+            <div class="sub-header">SIMULASI SIKLUS POSISI RAHU (MATAHARI HITAM) & KETU (EKOR NAGA)</div>
         </div>
 
         <div class="control-panel">
@@ -220,3 +220,4 @@
 </body>
 
 </html>
+
