Update 14. Simulasi Siklus Gerhana Matahari.html

--- a/14. Simulasi Siklus Gerhana Matahari.html
+++ b/14. Simulasi Siklus Gerhana Matahari.html
@@ -93,7 +93,7 @@
 
         <div class="header">
             <h1>PAWUKON RAHU</h1>
-            <div class="sub-header">ALMANAK GERHANA & POSISI MATAHARI</div>
+            <div class="sub-header">ALMANAK SIMULASI SIKLUS GERHANA & POSISI MATAHARI</div>
         </div>
 
         <div class="control-panel">
@@ -229,3 +229,4 @@
 </body>
 
 </html>
+
