Update 41. Ancient Astronomy.html

--- a/41. Ancient Astronomy.html
+++ b/41. Ancient Astronomy.html
@@ -286,7 +286,7 @@
             </div>
         </a>
 
-        <a href="17. Planetarium Simulator.html" class="card">
+        <a href="17. Planetarium Simulator.html" class="card" target="_blank">
             <span class="card-num">17</span>
             <div>
                 <div class="card-title"><span class="status-dot"></span>Star Cymatics</div>
@@ -328,3 +328,4 @@
 
 </body>
 </html>
+
