--- a/index.html
+++ b/index.html
@@ -503,6 +503,10 @@
                     <div class="app-icon">📖</div>
                     <div class="app-label">SUNDA NUSWANTARA ARCHIVE</div>
                 </a>
+                <a href="#" onclick="launchApp('62. Menu Ether Tech.html', 'Daftar Nilai', '📚')" class="app-card cat-fin">
+                    <div class="app-icon">📚</div>
+                    <div class="app-label">Lost Ether Technology</div>
+                 </a>
                 
             </div>
 
@@ -867,4 +871,5 @@
     </script>
 </body>
 </html>
+
 
