--- a/index.html
+++ b/index.html
@@ -503,7 +503,7 @@
                     <div class="app-icon">📖</div>
                     <div class="app-label">SUNDA NUSWANTARA ARCHIVE</div>
                 </a>
-                <a href="#" onclick="launchApp('62. Menu Ether Tech.html', 'Daftar Nilai', '📚')" class="app-card cat-fin">
+                <a href="#" onclick="launchApp('62. Menu Ether Tech.html', 'Lost Ether Technology', '📚')" class="app-card cat-fin">
                     <div class="app-icon">📚</div>
                     <div class="app-label">Lost Ether Technology</div>
                  </a>
@@ -871,5 +871,6 @@
     </script>
 </body>
 </html>
+
 
 
