Update 62. Menu Ether Tech.html

--- a/62. Menu Ether Tech.html
+++ b/62. Menu Ether Tech.html
@@ -111,6 +111,14 @@
 
         <div class="section-label" style="color:var(--tech-cyan)">/// DIVISION 1: ETHER-NET MAPPING</div>
 
+        <a href="62.Warning.html" class="card theme-net">
+            <div class="card-icon">📱</div>
+            <div>
+                <div class="card-title">Peringatan</div>
+                <div class="card-desc">Panduan Pembaca Sebelum Mengakses Informasi.</div>
+            </div>
+        </a>
+
         <a href="01. Mobile GPS.html" class="card theme-net">
             <div class="card-icon">📱</div>
             <div>
@@ -202,4 +210,5 @@
     </div>
 
 </body>
+
 </html>
